apps/homelab/jellyfleet/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: jellyfleet
  labels: &labels
    app.kubernetes.io/name: radarr
    app.kubernetes.io/component: media-automation
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/part-of: jellyfleet
    app.kubernetes.io/version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        role: downloads-media
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-nas
              mountPath: /storage/media-nas
            - name: media-wdmycloud
              mountPath: /storage/wdmycloud-smb
            - name: downloads
              mountPath: /downloads
            - name: downloads-nfs
              mountPath: /downloads-nfs
          livenessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
      volumes:
        - name: config
          hostPath:
            path: /data/configs/radarr
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /data/torrents/downlodas
            type: DirectoryOrCreate
        - name: downloads-nfs
          hostPath:
            path: /storage/downloads
        - name: media-nas
          hostPath:
            path: /storage/nas-media
        - name: media-wdmycloud
          hostPath:
            path: /storage/wdmycloud-smb
