apps/homelab/jellyfleet/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: jellyfleet
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
    - host: radarr.homelab.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
  tls:
    - hosts:
        - radarr.homelab.rookian.dev
      secretName: tls-radarr-homelab
